--- a/blockchain-challenge/package.json
+++ b/blockchain-challenge/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "echo '⚠️  Tests temporarily disabled - focusing on blockchain features'",
+    "test": "vitest",
     "test:ui": "vitest --ui"
   },
   "dependencies": {
