--- a/blockchain-challenge/package.json
+++ b/blockchain-challenge/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.89.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.1",
     "viem": "^2.37.6",
     "wagmi": "^2.16.9"
   },
@@ -38,5 +39,6 @@
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2",
     "vitest": "^3.2.4"
-  }
+  },
+  "packageManager": "pnpm@8.15.1+sha1.8adba2d20330c02d3856e18c4eb3819d1d3ca6aa"
 }
